# CircuitPython_CaveBLE

./: .pre-commit-config.yaml  CaveBLE.kt  README.rst  caveble.py  distox.py  optional_requirements.txt  pyproject.toml  requirements.txt
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: caveble_simpletest.py  distox_simpletest.py
