# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Phil Underwood for Underwood Underground
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-caveble"
description = "Cave Surveying Bluetooth Protocol"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Phil Underwood", email = "beardydoc@gmail.com"}
]
urls = {Homepage = "https://github.com/furbrain/CircuitPython_CaveBLE"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "disto",
    "distox",
    "bluetooth",
    "cave",
    "survey",
    "caveble",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["caveble"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
